syntax = "proto3";

package files;

service FileService {
  rpc ListFiles (ListFilesRequest) returns (ListFilesResponse);
  rpc GetFile (GetFileRequest) returns (GetFileResponse);
  rpc UploadFile (UploadFileRequest) returns (UploadFileResponse);
  rpc DeleteFile (DeleteFileRequest) returns (DeleteFileResponse);
  rpc MoveFile (MoveFileRequest) returns (MoveFileResponse);
}

message ListFilesRequest {
  string entity_type = 1;
  string entity_id = 2;
  string user_id = 3;
  int32 page = 4;
  int32 limit = 5;
}

message ListFilesResponse {
  repeated File files = 1;
  Pagination pagination = 2;
}

message GetFileRequest {
  string id = 1;
  string user_id = 2;
}

message GetFileResponse {
  File file = 1;
}

message UploadFileRequest {
  string user_id = 1;
  string entity_type = 2;
  string entity_id = 3;
  bytes file_data = 4;
  string file_name = 5;
  string file_type = 6;
}

message UploadFileResponse {
  File file = 1;
}

message DeleteFileRequest {
  string id = 1;
  string user_id = 2;
}

message DeleteFileResponse {
  string message = 1;
}

message MoveFileRequest {
  string id = 1;
  string user_id = 2;
  string entity_type = 3;
  string entity_id = 4;
}

message MoveFileResponse {
  File file = 1;
}

message File {
  string id = 1;
  string entity_type = 2;
  string entity_id = 3;
  string file_name = 4;
  string file_path = 5;
  string file_url = 6;
  string file_type = 7;
  int64 file_size = 8;
  string storage_type = 9;
  string uploaded_by = 10;
  string uploaded_at = 11;
}

message Pagination {
  int32 page = 1;
  int32 limit = 2;
  int32 total = 3;
  int32 total_pages = 4;
}

